RESOLVED FIXED285685
URLPattern Tokenizer::getNextCodePoint is not handling correctly 8bit strings
https://bugs.webkit.org/show_bug.cgi?id=285685
Summary URLPattern Tokenizer::getNextCodePoint is not handling correctly 8bit strings
youenn fablet
Reported 2025-01-09 07:06:52 PST
Tokenizer::getNextCodePoint is not handling correctly 8bit strings
Attachments
Radar WebKit Bug Importer
Comment 1 2025-01-09 07:07:07 PST
youenn fablet
Comment 2 2025-01-09 07:23:02 PST
EWS
Comment 3 2025-01-14 10:23:09 PST
Committed 288862@main (6a49d757b572): <https://commits.webkit.org/288862@main> Reviewed commits have been landed. Closing PR #38789 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.